[project]
name = "property-ai-analyzer"
version = "0.1.0"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.3.0", 
    "google-generativeai>=0.3.0",
    "pandas>=2.0.3",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
